test/stage2/test_11810517_4.out
Error type 3 at Line 5: variable "b" is redefined.