test/stage2/test_11810517_4.spl
int main() {
	int a = 10;
	if (a < 5) {
		int b = 10;
		int b;
		if (b == 10) {
			int c = 20;
		}
	}
	return 0;
}